--- a/FishAdventure.html
+++ b/FishAdventure.html
@@ -10,10 +10,10 @@
     One day, your best friend swims up to you. She is panicked. She explains that she heard 2 fishermen talking to each other, saying that they are going to come to our lake and catch fish for dinner tommorow. She says that she is going to swim to a nearby pond. However, you must remember that the journey to the pond is long and dangerous. Do you go with your best friend or do you stay in the lake? </p>
     <br>
     
-    <a href="externalfile:drive-ae3b1618e8d089c9db4be4289dc5cbf2797cfae6/root/CodeQuest/Adventure game/GoWithYourFriend.html">Go With Your Friend</a>
+    <a href="GoWithYourFriend.html">Go With Your Friend</a>
     <br>
     <br>
-    <a href="externalfile:drive-ae3b1618e8d089c9db4be4289dc5cbf2797cfae6/root/CodeQuest/Adventure game/StayInLake.html" >Stay In The Lake</a>
+    <a href="StayInLake.html" >Stay In The Lake</a>
     <br>
     <br>
     
