--- a/GoToMiddle.html
+++ b/GoToMiddle.html
@@ -6,10 +6,10 @@
 <h1>Go To The Middle Of The Lake</h1>
 <p>You go to the middle of the lake. However, the fishermen catch you! What will you do? Will try to escape, or play dead?</p>
 <br>
-    <a href="externalfile:drive-ae3b1618e8d089c9db4be4289dc5cbf2797cfae6/root/CodeQuest/Adventure game/Escape.html">Escape!</a>
+    <a href="Escape.html">Escape!</a>
     <br>
     <br>
-    <a href="externalfile:drive-ae3b1618e8d089c9db4be4289dc5cbf2797cfae6/root/CodeQuest/Adventure game/PlayDead.html">Play Dead</a>
+    <a href="PlayDead.html">Play Dead</a>
     <style>
     body {
     background-image: url("https://image.shutterstock.com/image-photo/school-mackerel-fish-underwater-260nw-276572954.jpg");
